funcionando los animations

--- a/angular.json
+++ b/angular.json
@@ -6,16 +6,16 @@
     "AngularMM": {
       "projectType": "application",
       "schematics": {},
-      "root": "",
+      "root": "src",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/angular-mm",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -94,5 +94,6 @@
         }
       }
     }
-  }
+  },
+  "defaultProject": "AngularMM"
 }
