--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/rose-red.css",
-              "src/styles.css"
+              "src/styles.css",
+              "@angular/material/prebuilt-themes/deeppurple-amber.css"
             ],
             "scripts": []
           },
@@ -86,7 +86,6 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,6 +93,5 @@
         }
       }
     }
-  },
-  "defaultProject": "AngularMM"
+  }
 }
